PROD_10-24-19/force-app/main/default/objects/Lead/fields/Annual_Consumption_GWH__c.field-meta.xml
<CustomField>
    <fullName>Annual_Consumption_GWH__c</fullName>
    <label>Annual Consumption (GWH/MWH)</label>
    <length>8</length>
    <type>Text</type>
</CustomField>