PROD_10-24-19/force-app/main/default/objects/Lead/fields/Candidate_type__c.field-meta.xml
<CustomField>
    <fullName>Candidate_type__c</fullName>
    <label>Candidate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portfolio Manager</fullName>
            </value>
            <value>
                <fullName>Risk</fullName>
            </value>
            <value>
                <fullName>Sourcer</fullName>
            </value>
            <value>
                <fullName>Trader</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>