PROD_10-24-19/force-app/main/default/objects/Lead/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Asset Manager / Sponsor / IM / PE</fullName>
            </value>
            <value>
                <fullName>Endowment / Foundation</fullName>
            </value>
            <value>
                <fullName>Family Office / High Net Worth</fullName>
            </value>
            <value>
                <fullName>Financial Advisor / Consultant</fullName>
            </value>
            <value>
                <fullName>Hedgefund</fullName>
            </value>
            <value>
                <fullName>Insurance Company</fullName>
            </value>
            <value>
                <fullName>Pension Fund</fullName>
            </value>
            <value>
                <fullName>Private Corporation</fullName>
            </value>
            <value>
                <fullName>Publicly-Listed Corporation</fullName>
            </value>
            <value>
                <fullName>REIT</fullName>
            </value>
            <value>
                <fullName>REOC</fullName>
            </value>
            <value>
                <fullName>Sovereign Wealth</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>