PROD_10-24-19/force-app/main/default/objects/Lead/fields/Deal_Nature__c.field-meta.xml
<CustomField>
    <fullName>Deal_Nature__c</fullName>
    <label>Deal Nature</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>