PROD_10-24-19/force-app/main/default/objects/Lead/fields/Exclude_from_Ideas_Report__c.field-meta.xml
<CustomField>
    <fullName>Exclude_from_Ideas_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Click this checkbox if you wish to exclude this Idea from the Ideas/Deal Leads Report</inlineHelpText>
    <label>Exclude from Ideas Report</label>
    <type>Checkbox</type>
</CustomField>