PROD_10-24-19/force-app/main/default/objects/Lead/fields/Geography__c.field-meta.xml
<CustomField>
    <fullName>Geography__c</fullName>
    <label>Geography</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
            <value>
                <fullName>Western Europe</fullName>
            </value>
            <value>
                <fullName>Other Europe</fullName>
            </value>
            <value>
                <fullName>APAC</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Middle East &amp; Africa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>