PROD_10-24-19/force-app/main/default/objects/Lead/fields/Private_Equity__c.field-meta.xml
<CustomField>
    <fullName>Private_Equity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Private Equity</label>
    <type>Checkbox</type>
</CustomField>