PROD_10-24-19/force-app/main/default/objects/Lead/fields/zisf__zoom_id__c.field-meta.xml
<CustomField>
    <fullName>zisf__zoom_id__c</fullName>
    <description>ZoomInfo person id, if the data on this object has ever been imported from the ZIDB.
Stored as Long on Solr.</description>
    <label>ZoomInfo ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>