PROD_10-24-19/force-app/main/default/objects/Lead/fields/zisf__ZoomInfo_Complete_Status__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Complete_Status__c</fullName>
    <defaultValue>&quot;Not Compared&quot;</defaultValue>
    <label>ZoomInfo Complete Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>