PROD_10-24-19/force-app/main/default/objects/Lead/fields/zisf__ZoomInfo_Email__c.field-meta.xml
<CustomField>
    <fullName>zisf__ZoomInfo_Email__c</fullName>
    <description>ZoomInfo Email Address for the Lead record.</description>
    <inlineHelpText>ZoomInfo Email Address for the Lead record.</inlineHelpText>
    <label>ZoomInfo Email</label>
    <type>Email</type>
</CustomField>