PROD_10-24-19/force-app/main/default/objects/Lead/recordTypes/Alts_candidate.recordType-meta.xml
<RecordType>
    <fullName>Alts_candidate</fullName>
    <active>true</active>
    <businessProcess>PSG ALT</businessProcess>
    <label>Alts candidate</label>
</RecordType>