PROD_10-24-19/force-app/main/default/objects/Lead/recordTypes/BRP_Europe.recordType-meta.xml
<RecordType>
    <fullName>BRP_Europe</fullName>
    <active>true</active>
    <businessProcess>BRP</businessProcess>
    <label>BRP Europe</label>
</RecordType>