PROD_10-24-19/force-app/main/default/objects/Lead/validationRules/FirstName_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FirstName_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK ( FirstName )</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>First Name is Required field.</errorMessage>
</ValidationRule>