PROD_10-24-19/force-app/main/default/objects/Lead/listViews/BRP_NA_Leads_with_Associated_Account.listView-meta.xml
<ListView>
    <fullName>BRP_NA_Leads_with_Associated_Account</fullName>
    <columns>LEAD.COMPANY</columns>
    <columns>FULL_NAME</columns>
    <columns>LEAD.TITLE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <columns>LEAD.RATING</columns>
    <columns>Region__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LEAD.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead.BRP_North_America</value>
    </filters>
    <label>BRP NA Leads with Associated Account</label>
    <sharedTo>
        <role>BRP</role>
        <role>BRP_Commercial_Dev</role>
    </sharedTo>
</ListView>