PROD_10-24-19/force-app/main/default/objects/Lead/listViews/PSG_Alts_Team_Leads.listView-meta.xml
<ListView>
    <fullName>PSG_Alts_Team_Leads</fullName>
    <columns>FULL_NAME</columns>
    <columns>LEAD.LAST_NAME</columns>
    <columns>LEAD.FIRST_NAME</columns>
    <columns>LEAD.COMPANY</columns>
    <columns>LEAD.STATE_CODE</columns>
    <columns>LEAD.EMAIL</columns>
    <columns>LEAD.STATUS</columns>
    <columns>LEAD.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>LEAD.UNREAD</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.LAST_NAME</field>
        <operation>equals</operation>
        <value>,Daugherty,Siegel,Hara,Cococcia,Gallagher</value>
    </filters>
    <label>PSG Alts Team Leads</label>
    <sharedTo>
        <role>PSG_ALTS</role>
    </sharedTo>
</ListView>